test/conformance/chainsaw/validating-policies/match-conditions/cel-libs/skipped-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: skipped-pod
spec:
  containers:
  - name: container01
    image: busybox:latest
    securityContext:
      allowPrivilegeEscalation: true
