test/conformance/chainsaw/validating-policies/match-conditions/cel-libs/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cel-libs
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: disallow-privilege-escalation-for-corp-registry
  - name: create bad-pod.yaml
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-pod.yaml
  - name: create skipped-pod
    try:
    - apply:
        file: skipped-pod.yaml
  - name: create good-pod
    try:
    - apply:
        file: good-pod.yaml
